# OptiDopi

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  DatasetCreator.cpp  McIntyreSolo.cpp  PSWARM_SPAD.cpp  Quencher.cpp  SA_SPAD.cpp  optim_spad_full.cpp  optim_spad_simple.cpp  pswar_spad_simple.cpp  simple_spad.cpp  spad_bv_sweep.cpp  spad_cost_function.cpp  test_interp.cpp  test_optim.cpp  test_pn.cpp
docs/Latex/: Poisson.aux  Poisson.fdb_latexmk  Poisson.fls  Poisson.tex
figplots/: ParticlsSwarmExample.ipynb  check_admc.ipynb  figures_iter copy.ipynb  figures_iter.ipynb  general_optimization.ipynb  optimization_path.ipynb  plot_cost_func.ipynb
figplots/.ipynb_checkpoints/: figures_iter-checkpoint.ipynb  plot_cost_func-checkpoint.ipynb
python/: AnimateADMC.py  BVSweep.ipynb  ComplexeDevice.ipynb  ParticleSwarmPlot.ipynb  ParticleSwarmPlotSPAD.ipynb  RastringOptim.ipynb  Untitled.ipynb  optim_anim.ipynb  optim_spad_ego.ipynb  paper_heatmap_cf.ipynb  parse_plot_jitter_results.py  plot_bv.ipynb  plot_doping_profile.py  plot_heatmaps_paper.py  plot_mcintyre.py  plot_optim1D_res.ipynb  plot_optim2D_res.ipynb  plot_quencher.py  plot_solution.py  plot_solution_animation.py  pswarm_spad_anim.ipynb  res_cost_func.csv  run_inoue_sweep.py  simpleplot.ipynb  vghj.ipynb
python/.ipynb_checkpoints/: ParticleSwarmPlot-checkpoint.ipynb  ParticleSwarmPlotSPAD-checkpoint.ipynb  Untitled-checkpoint.ipynb  optim_anim-checkpoint.ipynb  optim_spad_ego-checkpoint.ipynb  paper_heatmap_cf-checkpoint.ipynb  pswarm_spad_anim-checkpoint.ipynb
python/EGO/: optim_spad_ego.ipynb  optim_spad_ego_1Param.ipynb
python/EGO/.ipynb_checkpoints/: optim_spad_ego-checkpoint.ipynb
python/EGO/RES/: res_cost_func.csv
python/MLearning/: Complex1DRegression.ipynb  FigMerits.avi  JitterResults.ipynb  PlotPath_PSO_vs_MC.ipynb  Simple1DRegression.ipynb  Thumbs.db
python/MLearning/.ipynb_checkpoints/: Complex1DRegression-checkpoint.ipynb  JitterResults-checkpoint.ipynb  Simple1DRegression-checkpoint.ipynb
python/OptimPlots/: ComplexeDevice.ipynb  MC_Plots.ipynb  ParticleSwarmPlot.ipynb  ParticleSwarmPlotSPAD.ipynb  PlotProfiles.ipynb  optim_anim.ipynb  paper_heatmap_cf.ipynb  plot_bv.ipynb  plot_optim1D_res.ipynb  plot_optim2D_res.ipynb  pswarm_spad_anim.ipynb
python/Poisson/: DolfinPoisson2D.ipynb  HelperP2D.ipynb  McIntyreLETI.py  Poisson1D.py  Poisson2D.py  V.txt
python/Poisson/out_poisson/: poisson.h5  poisson.xdmf
python/RES/: res_cost_func.csv
python/archives/: BVSweep.ipynb  plot_solution.py
src/Device/: AdvectionDiffusionMC.cpp  AdvectionDiffusionMC.hpp  BACKUPS.cpp  CMakeLists.txt  Device1D.cpp  Device1D.hpp  DopingProfile1D.cpp  DopingProfile1D.hpp  ImpactIonization.hpp  McIntyre.cpp  McIntyre.hpp  ParticleAdvectionDiffusionMC.hpp  PoissonSolver.cpp  PoissonSolver.hpp  PoissonSolver1D.cpp  PoissonSolver1D.hpp  device.cpp  device.hpp  doping_profile.cpp  doping_profile.hpp
src/Optimization/: CMakeLists.txt  Functions.hpp  GradientDescent.cpp  GradientDescent.hpp  MainFunctions.cpp  MainFunctions.hpp  OptimStruct.hpp  ParticleSwarm.cpp  ParticleSwarm.hpp  SimulatedAnneal.cpp  SimulatedAnneal.hpp
src/Physics/: CMakeLists.txt  Mobility.hpp  Vector3.hpp  physical_constants.hpp
src/Utils/: CMakeLists.txt  Physics.hpp  Statistics.hpp  export_vector.hpp  fill_vector.hpp  gradient.hpp  interpolation.hpp  smoother.hpp
tests/: CMakeLists.txt  TestDiffusion.cpp  TestIIADMCBulk.cpp  TestVelocityADMCBulk.cpp  plot_test_result.ipynb
